--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 73.042.962/0004-20</p>
         </div>
     </footer>
-    <script src="./src/main.js"></script>
+    <script src="./dist/js/main.js"></script>
 </body>
 
 </html>
